tests/machine/x/hs/group_by_left_join.error

/workspace/mochi/tests/machine/x/hs/group_by_left_join.hs:131:341: error:
    • Couldn't match type ‘AnyValue’ with ‘Int’
      Expected: Map.Map String Int
        Actual: Map.Map String AnyValue
    • In the second argument of ‘Map.lookup’, namely ‘(c)’
      In the second argument of ‘fromMaybe’, namely
        ‘(Map.lookup "id" (c))’
      In the second argument of ‘(==)’, namely
        ‘fromMaybe (error "missing") (Map.lookup "id" (c))’
    |
131 | stats = [Map.fromList [("name", VString (key (g))), ("count", VInt (length [r | r <- filter (\r -> fromMaybe (error "missing") (Map.lookup "o" (r))) g]))] | g <- _group_by [(c, o) | c <- customers, o <- let _ms0 = [o | o <- orders, (fromMaybe (error "missing") (Map.lookup "customerId" (o)) == fromMaybe (error "missing") (Map.lookup "id" (c)))] in if null _ms0 then [Map.empty] else _ms0] (\(c, o) -> fromMaybe (error "missing") (Map.lookup "name" c)), let g = g]
    |                                                                                                                                                                                                                                                                                                                                                     ^
